<resources>
    <string name="app_name">FinalPractices</string>

    <!--登录界面-->
    <string name="login_phone_number">电话号码</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="register_nickname">昵称</string>
    <string name="register_password_check">确认密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_search_content">搜索内容</string>
    <string name="comment">条评论</string>

</resources>
