<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/login_fl_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_iv_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/de_bg"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="91dip"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dip"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/login_liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:orientation="horizontal">


                <com.qiuzhonghao.finalpractices.ui.custom.ClearWriteEditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rs_login_edittext_style"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/login_phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"/>

                <FrameLayout
                    android:id="@+id/fl_username_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/et_login_phone"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_liner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="37dip"
                android:orientation="horizontal">


                <com.qiuzhonghao.finalpractices.ui.custom.ClearWriteEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rs_login_edittext_style"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"/>

                <FrameLayout
                    android:id="@+id/fl_passward_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:visibility="gone">

                </FrameLayout>
            </RelativeLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="34dip"
                android:background="@drawable/rs_select_btn_blue"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"/>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/login_forget_password"
        android:textColor="#999999"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/login_register"
        android:textColor="#999999"
        android:textSize="14sp"/>

</RelativeLayout>
